--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
                                     >
                                       <path
                                         d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
-                                      ></path></svg
+                                      ></path></svg>
                                   ></span></button
                                 ><button
                                   class="MuiButtonBase-root MuiIconButton-root roo191"
@@ -5743,8 +5743,7 @@
                         value="en"
                       /><span
                         class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-5xa7ru"
-                        aria-hidden="true"
-                        ><svg
+                        aria-hidden="true" ><svg
                           width="20"
                           height="20"
                           viewBox="0 0 20 20"
@@ -5759,8 +5758,8 @@
                               stroke-width="2"
                               stroke-linecap="round"
                             ></path>
-                          </g></svg
-                      ></span>
+                          </g>
+                        </svg></span>
                       <fieldset
                         aria-hidden="true"
                         class="MuiOutlinedInput-notchedOutline css-igs3ac"
