Fixed:down arrow

--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                                       <path
                                         d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                                       ></path></svg>
-                                  ></span></button
+                                  </span></button
                                 ><button
                                   class="MuiButtonBase-root MuiIconButton-root roo191"
                                   tabindex="0"
@@ -1493,9 +1493,7 @@
                                       >
                                         <path
                                           d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
-                                        ></path></svg
-                                    ></span></button
-                                  ><button
+                                        ></path></svg ></span></button><button
                                     class="MuiButtonBase-root MuiIconButton-root roo191"
                                     tabindex="0"
                                     type="button"
@@ -1939,8 +1937,7 @@
                                       >
                                         <path
                                           d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
-                                        ></path></svg
-                                    ></span></button
+                                        ></path></svg ></span></button
                                   ><button
                                     class="MuiButtonBase-root MuiIconButton-root roo191"
                                     tabindex="0"
@@ -2311,8 +2308,7 @@
                                       >
                                         <path
                                           d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
-                                        ></path></svg
-                                    ></span></button
+                                        ></path></svg></span></button
                                   ><button
                                     class="MuiButtonBase-root MuiIconButton-root roo191"
                                     tabindex="0"
@@ -3857,8 +3853,7 @@
                                 >
                                   <path
                                     d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
-                                  ></path></svg
-                              ></span></button
+                                  ></path></svg ></span></button
                             ><button
                               class="MuiButtonBase-root MuiIconButton-root roo191"
                               tabindex="0"
@@ -4605,7 +4600,7 @@
                               Casino
                             </h5>
                           </div>
-                          <div class="arrow-down">&#9660;</div>
+                          <div class="arrow-down"> <img src="./fonts/down arrow.svg" alt=""></div>
                         </div>
                         <div class="accordion-content MuiList-root">
                           <!-- Add more list items as needed -->
@@ -4692,7 +4687,7 @@
                               Sportsbook
                             </h5>
                           </div>
-                          <div class="arrow-down">&#9660;</div>
+                          <div class="arrow-down"> <img src="./fonts/down arrow.svg" alt=""></div>
                         </div>
                         <div class="accordion-content MuiList-root">
                           <!-- Add more list items as needed -->
@@ -4759,7 +4754,7 @@
                               Policies
                             </h5>
                           </div>
-                          <div class="arrow-down">&#9660;</div>
+                          <div class="arrow-down"> <img src="./fonts/down arrow.svg" alt=""></div>
                         </div>
                         <div class="accordion-content MuiList-root">
                           <!-- Add more list items as needed -->
@@ -4844,7 +4839,7 @@
                               Promos
                             </h5>
                           </div>
-                          <div class="arrow-down">&#9660;</div>
+                          <div class="arrow-down"> <img src="./fonts/down arrow.svg" alt=""></div>
                         </div>
                         <div class="accordion-content MuiList-root">
                           <!-- Add more list items as needed -->
@@ -4906,7 +4901,7 @@
                               Support
                             </h5>
                           </div>
-                          <div class="arrow-down">&#9660;</div>
+                          <div class="arrow-down"> <img src="./fonts/down arrow.svg" alt=""></div>
                         </div>
                         <div class="accordion-content MuiList-root">
                           <!-- Add more list items as needed -->
