--- a/index.html
+++ b/index.html
@@ -37,142 +37,13 @@
     <meta name="theme-color" content="#191b31" />
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <link rel="manifest" href="/manifest.json" />
-
-    <!-- <link
-      rel="alternate"
-      hreflang="en"
-      href="https://roobet.com/?lng=en"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="es"
-      href="https://roobet.com/?lng=es"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="pt"
-      href="https://roobet.com/?lng=pt"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="fr"
-      href="https://roobet.com/?lng=fr"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="sr"
-      href="https://roobet.com/?lng=sr"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="tr"
-      href="https://roobet.com/?lng=tr"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="ar"
-      href="https://roobet.com/?lng=ar"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="cs"
-      href="https://roobet.com/?lng=cs"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="hi"
-      href="https://roobet.com/?lng=hi"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="ja"
-      href="https://roobet.com/?lng=ja"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="fil"
-      href="https://roobet.com/?lng=fil"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="fa"
-      href="https://roobet.com/?lng=fa"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="id"
-      href="https://roobet.com/?lng=id"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="fi"
-      href="https://roobet.com/?lng=fi"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="zh"
-      href="https://roobet.com/?lng=zh"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="vi"
-      href="https://roobet.com/?lng=vi"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="th"
-      href="https://roobet.com/?lng=th"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="ko"
-      href="https://roobet.com/?lng=ko"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      hreflang="ru"
-      href="https://roobet.com/?lng=ru"
-      data-rh="true"
-    /> -->
     <meta
       name="description"
       content="Roobet.com Official Website: Roobet Casino is Crypto's Fastest Growing Casino, and it's run by a kangaroo. Hop in, chat with friends and play 2,400+ games!"
       data-rh="true"
     />
-    <script async="" src="js/hotjar-1938946.js"></script>
-    <script
-      async=""
-      src="js/modules.78e2d84033035343416f.js"
-      charset="utf-8"
-    ></script>
   </head>
   <body>
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-563FCQS"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
     <div id="root">
       <div id="app">
         <div
@@ -704,10 +575,10 @@
                               >
                               <div class="roo190">
                                 <button
-                                  class="MuiButtonBase-root MuiIconButton-root roo191 Mui-disabled Mui-disabled"
+                                  class="prev MuiButtonBase-root MuiIconButton-root roo191"
                                   tabindex="-1"
                                   type="button"
-                                  disabled=""
+                                  data-target="carousel1"
                                   title="Previous Page"
                                 >
                                   <span class="MuiIconButton-label"
@@ -722,10 +593,11 @@
                                       ></path></svg>
                                   </span></button
                                 ><button
-                                  class="MuiButtonBase-root MuiIconButton-root roo191"
+                                  class="next MuiButtonBase-root MuiIconButton-root roo191"
                                   tabindex="0"
                                   type="button"
                                   title="Next Page"
+                                  data-target="carousel1"
                                 >
                                   <span class="MuiIconButton-label"
                                     ><svg
@@ -741,7 +613,7 @@
                                 </button>
                               </div>
                             </div>
-                            <div class="roo192">
+                            <div  id="carousel1" class="carousel roo192">
                               <div class="roo193 roo350" style="opacity: 1">
                                 <div class="roo351">
                                   <a
@@ -1478,10 +1350,10 @@
                                 >
                                 <div class="roo190">
                                   <button
-                                    class="MuiButtonBase-root MuiIconButton-root roo191 Mui-disabled Mui-disabled"
+                                    class="prev MuiButtonBase-root MuiIconButton-root roo191"
                                     tabindex="-1"
                                     type="button"
-                                    disabled=""
+                                    data-target="carousel2"
                                     title="Previous Page"
                                   >
                                     <span class="MuiIconButton-label"
@@ -1494,9 +1366,10 @@
                                         <path
                                           d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                                         ></path></svg ></span></button><button
-                                    class="MuiButtonBase-root MuiIconButton-root roo191"
+                                    class="next MuiButtonBase-root MuiIconButton-root roo191"
                                     tabindex="0"
                                     type="button"
+                                    data-target="carousel2"
                                     title="Next Page"
                                   >
                                     <span class="MuiIconButton-label"
@@ -1513,7 +1386,7 @@
                                   </button>
                                 </div>
                               </div>
-                              <div class="roo192">
+                              <div  id="carousel2" class="carousel roo192">
                                 <div class="roo193 roo366" style="opacity: 1">
                                   <div class="roo351">
                                     <a class="" href="plinko.html"
@@ -1922,10 +1795,10 @@
                                 >
                                 <div class="roo190">
                                   <button
-                                    class="MuiButtonBase-root MuiIconButton-root roo191 Mui-disabled Mui-disabled"
+                                    class="prev MuiButtonBase-root MuiIconButton-root roo191"
                                     tabindex="-1"
                                     type="button"
-                                    disabled=""
+                                  data-target="carousel3"
                                     title="Previous Page"
                                   >
                                     <span class="MuiIconButton-label"
@@ -1939,10 +1812,11 @@
                                           d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                                         ></path></svg ></span></button
                                   ><button
-                                    class="MuiButtonBase-root MuiIconButton-root roo191"
+                                    class="next MuiButtonBase-root MuiIconButton-root roo191"
                                     tabindex="0"
                                     type="button"
                                     title="Next Page"
+                                    data-target="carousel3"
                                   >
                                     <span class="MuiIconButton-label"
                                       ><svg
@@ -1958,7 +1832,7 @@
                                   </button>
                                 </div>
                               </div>
-                              <div class="roo192">
+                              <div id="carousel3" class="carousel roo192">
                                 <div class="roo193 roo373" style="opacity: 1">
                                   <div class="roo351">
                                     <a class="" href="pragmatic_232.html"
@@ -2293,10 +2167,10 @@
                                 >
                                 <div class="roo190">
                                   <button
-                                    class="MuiButtonBase-root MuiIconButton-root roo191 Mui-disabled Mui-disabled"
+                                    class="prev MuiButtonBase-root MuiIconButton-root roo191"
                                     tabindex="-1"
                                     type="button"
-                                    disabled=""
+                                    data-target="carousel4"
                                     title="Previous Page"
                                   >
                                     <span class="MuiIconButton-label"
@@ -2310,10 +2184,11 @@
                                           d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                                         ></path></svg></span></button
                                   ><button
-                                    class="MuiButtonBase-root MuiIconButton-root roo191"
+                                    class="next MuiButtonBase-root MuiIconButton-root roo191"
                                     tabindex="0"
                                     type="button"
                                     title="Next Page"
+                                    data-target="carousel4"
                                   >
                                     <span class="MuiIconButton-label"
                                       ><svg
@@ -2329,7 +2204,7 @@
                                   </button>
                                 </div>
                               </div>
-                              <div class="roo192">
+                              <div id="carousel4" class="carousel roo192">
                                 <div class="roo193 roo374" style="opacity: 1">
                                   <div class="roo351">
                                     <a class="" href="bsg_RiseofTriton.html"
@@ -3053,6 +2928,7 @@
                         </div>
                       </div>
                       <!-- curosal 5 -->
+
                       <div class="roo325 roo326">
                         <div class="roo328">
                           <div class="">
@@ -3072,10 +2948,10 @@
                                 >
                                 <div class="roo190">
                                   <button
-                                    class="MuiButtonBase-root MuiIconButton-root roo191 Mui-disabled Mui-disabled"
+                                    class="prev MuiButtonBase-root MuiIconButton-root roo191"
                                     tabindex="-1"
                                     type="button"
-                                    disabled=""
+                                    data-target="carousel5"
                                     title="Previous Page"
                                   >
                                     <span class="MuiIconButton-label"
@@ -3091,10 +2967,11 @@
                                       </svg>
                                     </span></button
                                   ><button
-                                    class="MuiButtonBase-root MuiIconButton-root roo191"
+                                    class="next MuiButtonBase-root MuiIconButton-root roo191"
                                     tabindex="0"
                                     type="button"
                                     title="Next Page"
+                                    data-target="carousel5"
                                   >
                                     <span class="MuiIconButton-label"
                                       ><svg
@@ -3110,7 +2987,7 @@
                                   </button>
                                 </div>
                               </div>
-                              <div class="roo192">
+                              <div id="carousel5" class="carousel roo192">
                                 <div class="roo193 roo381" style="opacity: 1">
                                   <div class="roo351">
                                     <a class="" href="pragmatic_1701.html"
@@ -3838,11 +3715,11 @@
                           </h3>
                           <div class="roo190">
                             <button
-                              class="MuiButtonBase-root MuiIconButton-root roo191 Mui-disabled Mui-disabled"
+                              class="prev MuiButtonBase-root MuiIconButton-root roo191"
                               tabindex="-1"
                               type="button"
-                              disabled=""
                               title="Previous Page"
+                              data-target="carousel6"
                             >
                               <span class="MuiIconButton-label"
                                 ><svg
@@ -3855,10 +3732,11 @@
                                     d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                                   ></path></svg ></span></button
                             ><button
-                              class="MuiButtonBase-root MuiIconButton-root roo191"
+                              class="next MuiButtonBase-root MuiIconButton-root roo191"
                               tabindex="0"
                               type="button"
                               title="Next Page"
+                              data-target="carousel6"
                             >
                               <span class="MuiIconButton-label"
                                 ><svg
@@ -3874,7 +3752,8 @@
                             </button>
                           </div>
                         </div>
-                        <div class="roo192">
+                        <!--  -->
+                        <div id="carousel6" class="carousel roo192">
                           <div class="roo193 roo194" style="opacity: 1">
                             <a class="roo195" href="pragmatic-play.html"
                               ><img
@@ -6004,7 +5883,7 @@
         </div>
       </div>
     </div>
-
+    <script src="./caurosal.js"></script>
     <script>
       // Add JavaScript here if needed
       const accordionItems = document.querySelectorAll('.accordion-item');
