Feat:image fixing

--- a/index.html
+++ b/index.html
@@ -4857,7 +4857,7 @@
                       <h5
                         class="MuiTypography-root roo93 MuiTypography-h5 MuiTypography-colorTextPrimary"
                       >
-        
+                      
                       topluluk
                       </h5>
                       <div class="roo92">
@@ -5760,7 +5760,7 @@
                               ><img
                                 alt=""
                                 style="width: 100%; height: auto"
-                                src="9b4850fda55902b78bde79018ad2c4df-roobet.com-b0de34263ab88e1a4217dfe8b43f288cb1001bfc4e58a4bcdc85f3921198d06eac264c9a718b1e38cce5ce5e1ee41d75-c2VhbC5wbmc%253D"
+                                src="./images/licence image2.png"
                             /></a>
                           </div>
                         </div>
