Feat:finnal changes

--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
             </div>
           </div>
           <!-- navbar end -->
+
+
           <div class="roo5">
             <div
               style="
@@ -180,7 +182,7 @@
                 <div class="roo121">
                   <div class="roo122">
                     <div class="roo155 roo156"></div>
-                    <!-- for mobile  -->
+                    <!-- card for mobile  -->
                     <div class="roo159">
                       <a class="roo160 roo291" href="no-limit.html">
                         <div class="roo161">
@@ -225,9 +227,8 @@
                     </div>
                     <!-- end  -->
 
-                    <!-- for desktop -->
+                    <!--card for desktop -->
                     <div class="roo253">
-                      <!-- <a class="roo254 roo263" href="/raffle/no-limit"> -->
                       <a href="#" class="roo263">
                         <div class="roo255">
                           <div class="roo256 roo264"></div>
@@ -271,9 +272,9 @@
                         <!-- </a> -->
                       </a>
                     </div>
-                    <!-- end -->
+                    <!--card end -->
 
-                    <!-- completed section  -->
+                    <!-- 4 game card section start  -->
                     <div class="roo123 roo124">
                       <a
                         class="roo168 slots-game roo173 roo177"
@@ -553,8 +554,11 @@
                           ></div></div
                       ></a>
                     </div>
-                    <!-- completed section end  -->
+                    <!-- 4 game card section end  -->
 
+
+
+                    <!-- Caurosal parent  -->
                     <div class="roo325 roo326">
                       <!-- curosal 1 -->
                       <div class="roo328">
@@ -4013,12 +4017,14 @@
                         </div>
                       </div>
 
-                      <!-- caurosals end here  -->
+                      
                     </div>
+                    <!-- caurosals end here  -->
                   </div>
                 </div>
               </div>
             </div>
+            <!-- Table section start -->
             <div class="roo49"> 
               <div class="roo50">
                 <div class="roo51">
@@ -4461,6 +4467,7 @@
                 </table>
               </div>
             </div>
+            <!-- table section end  -->
 
             <div class="roo65">
               <div class="roo66">
@@ -4553,7 +4560,6 @@
                           </div>
                         </div>
                       </div>
-                      <!-- Add more accordion items as needed -->
                     </div>
                     <!-- 2 -->
                     <div class="accordion">
